--- a/views/room.ejs
+++ b/views/room.ejs
@@ -203,18 +203,18 @@
 
   <div id="login">
     
-    <!-- <img id="headerimg" src="logo.png" alt="eConverse" title="eConverse" />-->
+     <img id="headerimg" src="logo.png" alt="eConverse" title="eConverse" />
     
     <br />
     <br />
     <hr noshade>
 
     <form action="/" method="POST" id="loginForm">
-     <input title="PLEASE enter your name to join the session." id="name" type="text" maxlength="50" autocomplete="off" autofocus required placeholder="Please enter your name to join the session..." />
+     <input title="Please enter your name to join the session." id="name" type="text" maxlength="50" autocomplete="off" autofocus required placeholder="Please enter your name to join the session..." />
     <input title="Join session" id="loginSubmit" type="submit" value="&gt;" />
     </form>
 
-    <p id="about"><b>ECONVERSE</b> is a simple session-based text-messaging app built using Node.js and WebSockets <br /> ⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ <br />Made by Alan Zhu</p>
+    <p id="about"><b>eConverse</b> is a simple session-based text-messaging app built using Node.js and WebSockets <br /> ⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ <br />Made by Alan Zhu</p>
   </div> <!-- /login-->
 
   <div id="box">
@@ -239,8 +239,7 @@
     // Connect
     var domain = /:\/\/([^\/]+)/.exec(window.location.href)[1];
     console.log(domain);
-
-    var socket = io.connect('localhost:8080'); 
+    var socket = io.connect(domain); 
 
     // Forms
     $('#loginForm').submit(function (e) {
