--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,42 +13,16 @@
       padding: 0;
       box-sizing: border-box;
     }
-
     body {
       font-family: Arial, Helvetica, sans-serif;
       width: 100%;
     }
-
     body,
     html {
       min-height: 100%;
       max-height: 100%;
       margin: 0;
     }
-
-    #chatForm{
-      position: absolute;
-      bottom: 0;
-      background: #fff;
-      padding: 3px;
-      width: 100%;
-    }
-
-   
-
-    #messages {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    #notfilled {
-      font-size: 12pt;
-      position: absolute;
-      bottom:47px;
-      color: red;
-    }
-
     #box {
       overflow: auto;
       max-height: 94%;
@@ -56,7 +30,7 @@
       position: fixed;
       width: 100%;
     }
-    #login{
+    #roomDiv{
       position:fixed; 
       width:100%; 
       height:100%; 
@@ -80,223 +54,133 @@
       display:block;
       margin-left:auto;
       margin-right:auto;
-      
     }
+      @keyframes linkColor {
+  from {color: rgb(0, 162, 255);}
+  to {color: rgb(0, 209, 35);}
+}
 
+
+a.link, a.link:visited {
+  color: rgb(0, 162, 255);
+  text-decoration-line: none;
+  font-weight:bold;
+}
+
+a.link:hover {
+  animation-name: linkColor;
+  animation-duration: 0.2s;
+  color: rgb(0, 209, 35);
+}
+    
     #about{
       position:absolute;
       bottom:0;
       left:0;
       text-align:center;
       background-color: lightgrey;
-      padding:2%;
+      padding:1%;
       font-family:'Times New Roman', Times, serif;
       font-size:16pt;
       width:100%;
     }
-    #loginForm {
+    #roomForm {
       position:relative;
         top:20%;
-
+        left:0;
 
       margin-right: auto;
       margin-left:auto;
       display:flex;
       flex-direction:row;
     }
-
       #name {
       text-align: center;
-        margin-left:auto;
-    
-      display:block;
+      
+        display:inline;
         padding: 3%;
       outline:none;
-        width:50%;
+        width:40%;
       font-size:24pt;
       font-family: 'Times New Roman', Times, serif;
       border:none;
-      border-radius:20px;
-      /*border:5px solid lime;*/
-      background-color: rgb(253, 226, 167);
      
-        
+      /*border:5px solid lime;*/
+      background-color: rgb(0, 133, 221);        
     }
-    #loginSubmit{
+
+    #siteName {
+      text-align: center;
+        margin-left:auto;
+
+      display:inline;
+        padding: 3% 0.5%;
+      outline:none;
+      font-size:24pt;
+      font-family: 'Times New Roman', Times, serif;
+      border:none;
+    
+      width:20%;
+      background-color: rgb(255, 230, 148);        
+    }
+    #roomSubmit{
+      display:inline;
       text-align: center;
         padding: 1%;
         margin-right: auto;
       outline:none;
-        width:5%;
+        width:20%;
       font-size:24pt;
       font-family: 'Times New Roman', Times, serif;
       border:none;
-      border-radius:20px;
+    
       /*border:5px solid lime;*/
       background-color: rgb(124, 255, 141);
-
-
     }
-
-
-    
-   /* #name::placeholder {
-  color: black;
+    #name::placeholder {
+  color: rgb(59, 59, 59);
   opacity: 1; 
 }
 
 :-ms-input-placeholder { 
-  color: red;
+  color: rgb(59, 59, 59);
 }
 
 ::-ms-input-placeholder {
-  color: red;
-}*/
-
-#messages li {
-      padding: 5px 10px;
-      word-wrap: break-word;
-      font-size:16pt;
-    }
-
-#messages li:nth-child(odd) {
- background: rgb(245, 245, 245);
-  }
-
-#txt {
-      background-color: rgb(255, 240, 152);
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      padding: 10px;
-      width: 95%;
-      border:none;
-      outline:none;
-      margin-right: 0;
-      font-size:16pt;
-    }
-
-
-    #submit {
-      position: absolute;
-      bottom: 0;
-      left: 95%;
-      width: 5%;
-      background: rgb(124, 255, 141);
-      border: none;
-      padding: 10px;
-      font-size:16pt;
-    }
-
-
+  color: rgb(59, 59, 59);
+}
 
   </style>
-  <script src="../../socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
-
-<!--------------------------------------->
-
 <body>
-  
-
-  <div id="login">
-    
-    <!-- <img id="headerimg" src="logo.png" alt="eConverse" title="eConverse" />-->
-    
+    <div id="roomDiv">
+    <a href='/'>
+     <img id="headerimg" src="logo.png" alt="eConverse" title="eConverse" />
+    </a>
     <br />
     <br />
     <hr noshade>
 
-    <form action="/" method="POST" id="loginForm">
-     <input title="PLEASE enter your name to join the session." id="name" type="text" maxlength="50" autocomplete="off" autofocus required placeholder="Please enter your name to join the session..." />
-    <input title="Join session" id="loginSubmit" type="submit" value="&gt;" />
+    <p id="about"><b>eConverse</b> is a simple session-based text-messaging app built using Node.js and WebSockets <br /> ⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ <br /> 
+      Copyright &copy; 2020-2022 Alan Zhu <br> 
+      <a class="link" href="/" title="eConverse Home">Home</a> | <a title="View Code on Github" class="link" target="_blank" href="https://github.com/alanzhu1/eConverse">Open-Source</a></p>
+    
+  <form action="/" method="POST" id="roomForm">
+      <p id="siteName"></p>
+        <input title="eConverse Room" id="name" type="text" maxlength="50" autocomplete="off" autofocus required placeholder="Room" />
+       <input title="Go to room" id="roomSubmit" type="submit" value="Go to room &#11166;" />
     </form>
-
-    <p id="about"><b>ECONVERSE</b> is a simple session-based text-messaging app built using Node.js and WebSockets <br /> ⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ <br />Made by Alan Zhu</p>
-  </div> <!-- /login-->
-
-  <div id="box">
-    <ul id="messages">
-      <li style="background-color: rgb(130, 224, 255);"><strong>Welcome to eConverse!</strong></li>
-    </ul>
   </div>
-
-  <form action="/" method="POST" id="chatForm">
-    <p id="notfilled">Please enter a message</p>
-
-    <input id="txt" autocomplete="off" onkeydown="isTyping()" placeholder="Say something..." />
-    <input type="submit" id="submit" value="&gt;" title="Submit"/>
-  </form>
-
-
-  <script>
-    // Initialization
-    var notFilled = $('#notfilled');
-    notFilled.hide();
-
-    // Connect
-    var domain = /:\/\/([^\/]+)/.exec(window.location.href)[1];
-    console.log(domain);
-
-    var socket = io.connect(domain); 
-
-    // Forms
-    $('#loginForm').submit(function (e) {
+  
+<script>
+  $('#siteName').text(window.location.hostname +'/');
+  $('#roomForm').submit(function (e) {
       e.preventDefault();
-      var username = $('#name').val();
-      socket.emit('username', username);
-      $('#login').hide();
+      window.location.href=$('#name').val().replace(' ', '-');
     });
-
-
-    $('#chatForm').submit(function (e) {
-      e.preventDefault();
-      var txt = $('#txt');
-      if (!txt.val()) {
-        notFilled.show();
-       
-        return false;
-      }
-      else {
-        notFilled.hide();
-        socket.emit('msg', txt.val());
-        txt.val('');
-      
-        return false;
-      }
-    });
-
-    // Validation and Autoscroll
-    function isTyping() {
-      notFilled.hide();
-    }
-
-    function autoscroll(){
-      var lastMsg = document.getElementById('messages').lastElementChild;
-      var topPos = lastMsg.offsetTop;
-      document.getElementById('box').scrollTop = topPos;
-    }
-
-    // Change html
-
-    socket.on('message', function (msg) {
-      $('#messages').append($('<li>').html(msg));
-        autoscroll();  
-    });
-    socket.on('on', function (username) {
-      $('#messages').append($('<li style="background-color: rgb(216, 255, 200)">').html(username));
-        autoscroll();
-    });
-    socket.on('off', function (username) {
-      $('#messages').append($('<li style="background-color: rgb(255, 223, 223);">').html(username));
-        autoscroll();
-    });
-
-
-  </script>
-
+</script>
+  
 </body>
-
 </html>
